isar_plus/test/errors/class/enum.dart
// only classes

import 'package:isar_plus/isar_plus.dart';

// ignore: invalid_annotation_target
@collection
enum Test { a, b, c }
